@@ -9,42 +9,56 @@
 
 package org.elasticsearch.arrow.xcontent;
 
+import com.fasterxml.jackson.core.JsonParseException;
+
+import com.fasterxml.jackson.databind.util.ByteBufferBackedInputStream;
+
+import org.apache.arrow.memory.ArrowBuf;
 import org.apache.arrow.vector.BaseIntVector;
+import org.apache.arrow.vector.BigIntVector;
 import org.apache.arrow.vector.BitVector;
+import org.apache.arrow.vector.DateDayVector;
+import org.apache.arrow.vector.DateMilliVector;
+import org.apache.arrow.vector.Decimal256Vector;
+import org.apache.arrow.vector.DecimalVector;
+import org.apache.arrow.vector.DurationVector;
 import org.apache.arrow.vector.FixedSizeBinaryVector;
-import org.apache.arrow.vector.FloatingPointVector;
+import org.apache.arrow.vector.Float2Vector;
+import org.apache.arrow.vector.Float4Vector;
+import org.apache.arrow.vector.Float8Vector;
+import org.apache.arrow.vector.IntVector;
+import org.apache.arrow.vector.SmallIntVector;
 import org.apache.arrow.vector.TimeMicroVector;
 import org.apache.arrow.vector.TimeMilliVector;
 import org.apache.arrow.vector.TimeNanoVector;
 import org.apache.arrow.vector.TimeSecVector;
-import org.apache.arrow.vector.TimeStampMicroTZVector;
-import org.apache.arrow.vector.TimeStampMicroVector;
-import org.apache.arrow.vector.TimeStampMilliTZVector;
-import org.apache.arrow.vector.TimeStampMilliVector;
-import org.apache.arrow.vector.TimeStampNanoTZVector;
-import org.apache.arrow.vector.TimeStampNanoVector;
-import org.apache.arrow.vector.TimeStampSecTZVector;
-import org.apache.arrow.vector.TimeStampSecVector;
+import org.apache.arrow.vector.TimeStampVector;
+import org.apache.arrow.vector.TinyIntVector;
+import org.apache.arrow.vector.UInt1Vector;
+import org.apache.arrow.vector.UInt2Vector;
+import org.apache.arrow.vector.UInt4Vector;
+import org.apache.arrow.vector.UInt8Vector;
 import org.apache.arrow.vector.ValueVector;
 import org.apache.arrow.vector.VarCharVector;
 import org.apache.arrow.vector.VariableWidthFieldVector;
 import org.apache.arrow.vector.complex.BaseListVector;
 import org.apache.arrow.vector.complex.DenseUnionVector;
 import org.apache.arrow.vector.complex.MapVector;
+import org.apache.arrow.vector.complex.RunEndEncodedVector;
 import org.apache.arrow.vector.complex.StructVector;
 import org.apache.arrow.vector.complex.UnionVector;
 import org.apache.arrow.vector.dictionary.Dictionary;
 import org.apache.arrow.vector.types.Types;
+import org.apache.arrow.vector.types.pojo.ArrowType;
+import org.apache.arrow.vector.util.ReusableByteArray;
 import org.elasticsearch.libs.arrow.ArrowFormatException;
 import org.elasticsearch.xcontent.XContentGenerator;
+import org.elasticsearch.xcontent.XContentParserConfiguration;
+import org.elasticsearch.xcontent.XContentType;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.time.Instant;
-import java.time.ZoneId;
-import java.time.ZoneOffset;
 import java.util.EnumSet;
-import java.util.HashMap;
 import java.util.Map;
 
 /**
@@ -69,20 +83,12 @@ public class ArrowToXContent {
         Types.MinorType.VIEWVARCHAR
     );
 
-    static final long MILLIS_PER_SEC = 1_000L;
-    static final long NANOS_PER_SEC = 1_000_000_000L;
-    static final long NANOS_PER_MILLI = 1_000_000L;
-    static final long NANOS_PER_MICRO = 1_000L;
+    // Reusable buffer to transfer strings and byte values of length smaller than MAX_BUFFER_SIZE
+    private final ReusableByteArray bytesBuffer = new ReusableByteArray();
+    private static final int MAX_BUFFER_SIZE = 1024*1024;
 
-    private final Map<String, ZoneId> zidCache = new HashMap<>();
-
-    final long getUTCOffsetSeconds(long millis, String tz) {
-        var tzId = zidCache.computeIfAbsent(tz, ZoneId::of);
-        if (tzId instanceof ZoneOffset zo) {
-            return zo.getTotalSeconds();
-        }
-        var instant = Instant.ofEpochMilli(millis);
-        return tzId.getRules().getOffset(instant).getTotalSeconds();
+    private ReusableByteArray getBuffer(int length) {
+        return length > MAX_BUFFER_SIZE ? new ReusableByteArray() : bytesBuffer;
     }
 
     /**
@@ -115,7 +121,10 @@ public class ArrowToXContent {
             return;
         }
 
-        var dictEncoding = vector.getField().getDictionary();
+        var field = vector.getField();
+        var extension = field.getMetadata().get(ArrowType.ExtensionType.EXTENSION_METADATA_KEY_NAME);
+
+        var dictEncoding = field.getDictionary();
         if (dictEncoding != null) {
             // Note: to improve performance and reduce GC thrashing, we could eagerly convert dictionary
             // VarCharVectors to String arrays (likely the most frequent use of dictionaries)
@@ -131,50 +140,219 @@ public class ArrowToXContent {
             }
         }
 
+        if (extension != null) {
+            switch (extension) {
+                case "arrow.json" -> {
+                    writeJsonExtensionValue(vector, position, generator);
+                    return;
+                }
+                // Other canonical extensions: uuid, tensors, opaque, 8-bit boolean
+                // See https://arrow.apache.org/docs/format/CanonicalExtensions.html
+                //
+                // TODO: GeoArrow (non canonical)
+                // See https://geoarrow.org/
+            }
+        }
+
+        // Use an expression switch to make sure the compiler checks that every enumeration member is used.
+
         Void x = switch (vector.getMinorType()) {
 
-            // ----- Primitive values
+            //---- Numbers
+            // Performance: we could have cast the vector to the common BaseIntVector/FloatingPoint interface,
+            // but this would cause more costly casts and polymorphic dispatch to access the value, whereas
+            // concrete classes are final, allowing better optimizations or even inlining.
+            case TINYINT -> {
+                generator.writeNumber(((TinyIntVector) vector).get(position));
+                yield null;
+            }
+
+            case SMALLINT -> {
+                generator.writeNumber(((SmallIntVector) vector).get(position));
+                yield null;
+            }
+
+            case INT -> {
+                generator.writeNumber(((IntVector) vector).getValueAsLong(position));
+                yield null;
+            }
+
+            case BIGINT -> {
+                generator.writeNumber(((BigIntVector) vector).get(position));
+                yield null;
+            }
+
+            case UINT1 -> {
+                generator.writeNumber(((UInt1Vector) vector).getValueAsLong(position));
+                yield null;
+            }
+
+            case UINT2 -> {
+                generator.writeNumber(((UInt2Vector) vector).get(position));
+                yield null;
+            }
+
+            case UINT4 -> {
+                // Use valueAsLong to have unsigned integers if the value is greater than 0x7FFF_FFFF
+                generator.writeNumber(((UInt4Vector) vector).getValueAsLong(position));
+                yield null;
+            }
+
+            case UINT8 -> {
+                generator.writeNumber(((UInt8Vector) vector).get(position));
+                yield null;
+            }
+
+            case FLOAT2 -> {
+                generator.writeNumber(((Float2Vector) vector).getValueAsFloat(position));
+                yield null;
+            }
+
+            case FLOAT4 -> {
+                generator.writeNumber(((Float4Vector) vector).get(position));
+                yield null;
+            }
+
+            case FLOAT8 -> {
+                generator.writeNumber(((Float8Vector) vector).get(position));
+                yield null;
+            }
+
+            case DECIMAL -> {
+                var dVector = (DecimalVector) vector;
+                generator.writeNumber(dVector.getObjectNotNull(position));
+                yield null;
+            }
+
+            case DECIMAL256 -> {
+                var dVector = (Decimal256Vector) vector;
+                generator.writeNumber(dVector.getObjectNotNull(position));
+                yield null;
+            }
+
+            //---- Booleans
 
             case BIT -> {
                 generator.writeBoolean(((BitVector) vector).get(position) != 0);
                 yield null;
             }
 
-            case TINYINT, SMALLINT, INT, BIGINT, UINT1, UINT2, UINT4, UINT8 -> {
-                generator.writeNumber(((BaseIntVector) vector).getValueAsLong(position));
-                yield null;
-            }
-
-            case FLOAT2, FLOAT4, FLOAT8 -> {
-                generator.writeNumber(((FloatingPointVector) vector).getValueAsDouble(position));
-                yield null;
-            }
-
-            // ----- Strings and bytes
+            //---- Strings
 
             case VARCHAR, LARGEVARCHAR, VIEWVARCHAR -> {
                 var bytesVector = (VariableWidthFieldVector) vector;
-                generator.writeString(new String(bytesVector.get(position), StandardCharsets.UTF_8));
+                var buffer = getBuffer(bytesVector.getValueLength(position));
+                bytesVector.read(position, buffer);
+                generator.writeUTF8String(buffer.getBuffer(), 0, (int)buffer.getLength());
                 yield null;
             }
 
+            //---- Binary
+
             case VARBINARY, LARGEVARBINARY, VIEWVARBINARY -> {
                 var bytesVector = (VariableWidthFieldVector) vector;
-                generator.writeBinary(bytesVector.get(position));
+                var buffer = getBuffer(bytesVector.getValueLength(position));
+                bytesVector.read(position, buffer);
+                generator.writeBinary(buffer.getBuffer(), 0, (int)buffer.getLength());
                 yield null;
             }
 
             case FIXEDSIZEBINARY -> {
                 var bytesVector = (FixedSizeBinaryVector) vector;
-                generator.writeBinary(bytesVector.get(position));
+                var buffer = getBuffer(bytesVector.getByteWidth());
+                bytesVector.read(position, buffer);
+                generator.writeBinary(buffer.getBuffer(), 0, (int)buffer.getLength());
                 yield null;
             }
 
-            // ----- Lists
+            //----- Timestamps
+            //
+            // Timestamp values are relative to the Unix epoch in UTC, with an optional timezone.
+            // The ES date type has no timezone, so we drop this information.
+            // (TODO: define where the TZ should go, e.g. providing the name of a TZ field in the field's metadata)
+            //
+            // Seconds and millis are stored as millis, and micros and nanos as nanos, so that there's
+            // no precision loss. (FIXME: define this conversion using the ES field type)
+
+            case TIMESTAMPSEC, TIMESTAMPMICRO, TIMESTAMPSECTZ, TIMESTAMPMICROTZ -> {
+                var tsVector = (TimeStampVector) vector;
+                generator.writeNumber(tsVector.get(position) * 1000L);
+                yield null;
+            }
+
+            case TIMESTAMPMILLI, TIMESTAMPNANO, TIMESTAMPMILLITZ, TIMESTAMPNANOTZ -> {
+                var tsVector = (TimeStampVector) vector;
+                generator.writeNumber(tsVector.get(position));
+                yield null;
+            }
+
+            //---- Date
+            //
+            // Time since the epoch, in days or millis evenly divisible by 86_400_000
+            // Stored as millis
+
+            case DATEDAY -> {
+                var ddVector = (DateDayVector) vector;
+                generator.writeNumber(ddVector.get(position) * 86_400_000);
+                yield null;
+            }
+
+            case DATEMILLI -> {
+                var dmVector = (DateMilliVector) vector;
+                generator.writeNumber(dmVector.get(position));
+                yield null;
+            }
+
+            //----- Time
+            //
+            // Time since midnight, either a 32-bit or 64-bit signed integer.
+            // There is no equivalent in ES, but we still convert to millis or nanos
+            // to be consistent with timestamps.
+
+            case TIMESEC -> {
+                var tVector = (TimeSecVector) vector;
+                generator.writeNumber(tVector.get(position) * 1000);
+                yield null;
+            }
+
+            case TIMEMILLI -> {
+                var tVector = (TimeMilliVector) vector;
+                generator.writeNumber(tVector.get(position));
+                yield null;
+            }
+
+            case TIMEMICRO -> {
+                var tVector = (TimeMicroVector) vector;
+                generator.writeNumber(tVector.get(position) * 1000);
+                yield null;
+            }
+
+            case TIMENANO -> {
+                var tsVector = (TimeNanoVector) vector;
+                generator.writeNumber(tsVector.get(position));
+                yield null;
+            }
+
+            //---- Other fixed size types
+
+            case DURATION -> {
+                var dVector = (DurationVector) vector;
+                long value = DurationVector.get(dVector.getDataBuffer(), position);
+
+                value *= switch (dVector.getUnit()) {
+                    case SECOND, MICROSECOND -> 1000L;
+                    case MILLISECOND, NANOSECOND -> 1L;
+                };
+
+                generator.writeNumber(value);
+                yield null;
+            }
+
+            //---- Structured types
 
             case LIST, FIXED_SIZE_LIST, LISTVIEW -> {
                 var listVector = (BaseListVector) vector;
-                var valueVector = listVector.getChildrenFromFields().get(0);
+                var valueVector = listVector.getChildrenFromFields().getFirst();
                 int start = listVector.getElementStartIndex(position);
                 int end = listVector.getElementEndIndex(position);
 
@@ -186,119 +364,16 @@ public class ArrowToXContent {
                 yield null;
             }
 
-            // ----- Time
-            //
-            // "Time is either a 32-bit or 64-bit signed integer type representing an
-            // elapsed time since midnight, stored in either of four units: seconds,
-            // milliseconds, microseconds or nanoseconds."
-            //
-            // There's no such type in ES. Convert it to either milliseconds or nanoseconds to avoid losing precision.
-            case TIMESEC -> {
-                var tsVector = (TimeSecVector) vector;
-                generator.writeNumber(tsVector.get(position) * MILLIS_PER_SEC); // millisecs
-                yield null;
-            }
-
-            case TIMEMILLI -> {
-                var tsVector = (TimeMilliVector) vector;
-                generator.writeNumber(tsVector.get(position)); // millisecs
-                yield null;
-            }
-
-            case TIMEMICRO -> {
-                var tsVector = (TimeMicroVector) vector;
-                generator.writeNumber(tsVector.get(position) * NANOS_PER_MICRO); // nanosecs
-                yield null;
-            }
-
-            case TIMENANO -> {
-                var tsVector = (TimeNanoVector) vector;
-                generator.writeNumber(tsVector.get(position)); // nanosecs
-                yield null;
-            }
-
-            // ----- Timestamp
-            //
-            // From the spec: "Timestamp is a 64-bit signed integer representing an elapsed time since a
-            // fixed epoch, stored in either of four units: seconds, milliseconds,
-            // microseconds or nanoseconds, and is optionally annotated with a timezone.
-            // If a Timestamp column has no timezone value, its epoch is
-            // 1970-01-01 00:00:00 (January 1st 1970, midnight) in an *unknown* timezone."
-            //
-            // Arrow/Java uses different types for timestamps with a timezone (TIMESTAMPXXXTZ) and without
-            // a timezone (TIMESTAMPXXX).
-            // ES doesn't support timezones, so the TIMESTAMPXXXTZ are not supported.
-
-            case TIMESTAMPSEC -> {
-                var tsVector = (TimeStampSecVector) vector;
-                generator.writeNumber(tsVector.get(position) * MILLIS_PER_SEC); // millisecs
-                yield null;
-            }
-
-            case TIMESTAMPMILLI -> {
-                var tsVector = (TimeStampMilliVector) vector;
-                generator.writeNumber(tsVector.get(position)); // millisecs
-                yield null;
-            }
-
-            case TIMESTAMPMICRO -> {
-                var tsVector = (TimeStampMicroVector) vector;
-                generator.writeNumber(tsVector.get(position) * NANOS_PER_MICRO); // nanosecs
-                yield null;
-            }
-
-            case TIMESTAMPNANO -> {
-                var tsVector = (TimeStampNanoVector) vector;
-                generator.writeNumber(tsVector.get(position)); // nanosecs
-                yield null;
-            }
-
-            // ----- Timestamp with a timezone
-
-            case TIMESTAMPSECTZ -> {
-                var tsVector = (TimeStampSecTZVector) vector;
-                long millis = tsVector.get(position) * MILLIS_PER_SEC;
-                millis -= getUTCOffsetSeconds(millis, tsVector.getTimeZone()) * MILLIS_PER_SEC;
-                generator.writeNumber(millis);
-                yield null;
-            }
-
-            case TIMESTAMPMILLITZ -> {
-                var tsVector = (TimeStampMilliTZVector) vector;
-                long millis = tsVector.get(position);
-                millis -= getUTCOffsetSeconds(millis, tsVector.getTimeZone()) * MILLIS_PER_SEC;
-                generator.writeNumber(millis);
-                yield null;
-            }
-
-            case TIMESTAMPMICROTZ -> {
-                var tsVector = (TimeStampMicroTZVector) vector;
-                long nanos = tsVector.get(position) * NANOS_PER_MICRO;
-                nanos -= getUTCOffsetSeconds(nanos / NANOS_PER_MILLI, tsVector.getTimeZone()) * NANOS_PER_SEC;
-                generator.writeNumber(nanos);
-                yield null;
-            }
-
-            case TIMESTAMPNANOTZ -> {
-                var tsVector = (TimeStampNanoTZVector) vector;
-                long nanos = tsVector.get(position);
-                nanos -= getUTCOffsetSeconds(nanos / NANOS_PER_SEC, tsVector.getTimeZone()) * NANOS_PER_SEC;
-                generator.writeNumber(nanos);
-                yield null;
-            }
-
-            // ----- Composite types
-
             case MAP -> {
-                // A map is a container vector composed of a list of struct values with "key" and "value" fields. The MapVector
+                // A map is a container vector that is composed of a list of struct values with "key" and "value" fields. The MapVector
                 // is nullable, but if a map is set at a given index, there must be an entry. In other words, the StructVector data is
                 // non-nullable. Also for a given entry, the "key" is non-nullable, however the "value" can be null.
 
                 var mapVector = (MapVector) vector;
-                var structVector = (StructVector) mapVector.getChildrenFromFields().get(0);
-                var kVector = structVector.getChildrenFromFields().get(0);
+                var structVector = (StructVector) mapVector.getChildrenFromFields().getFirst();
+                var kVector = structVector.getChildrenFromFields().getFirst();
                 if (STRING_TYPES.contains(kVector.getMinorType()) == false) {
-                    throw new ArrowFormatException("Arrow maps must have string keys to be converted to JSON");
+                    throw new ArrowFormatException("Maps must have string keys");
                 }
 
                 var keyVector = (VarCharVector) kVector;
@@ -323,9 +398,9 @@ public class ArrowToXContent {
             case STRUCT -> {
                 var structVector = (StructVector) vector;
                 generator.writeStartObject();
-                for (var field : structVector.getChildrenFromFields()) {
-                    generator.writeFieldName(field.getName());
-                    writeValue(field, position, dictionaries, generator);
+                for (var structField : structVector.getChildrenFromFields()) {
+                    generator.writeFieldName(structField.getName());
+                    writeValue(structField, position, dictionaries, generator);
                 }
                 generator.writeEndObject();
                 yield null;
@@ -351,15 +426,48 @@ public class ArrowToXContent {
             }
 
             case NULL -> {
+                // Should  have been handled at the beginning of this method,
+                // but keep it to have exhaustive coverage of enum values.
                 generator.writeNull();
                 yield null;
             }
 
-            // TODO
-            case DATEDAY, DATEMILLI, INTERVALDAY, INTERVALMONTHDAYNANO, DURATION, INTERVALYEAR, DECIMAL, DECIMAL256, LARGELIST,
-                LARGELISTVIEW, EXTENSIONTYPE, RUNENDENCODED -> throw new ArrowFormatException(
-                    "Arrow type [" + vector.getMinorType() + "] not supported for field [" + vector.getName() + "]"
-                );
+
+            case INTERVALYEAR, INTERVALDAY, INTERVALMONTHDAYNANO, // ES doesn't have any interval types
+                 LARGELIST, LARGELISTVIEW // 64-bit vector support is incomplete
+                -> throw new JsonParseException(
+                "Arrow type [" + vector.getMinorType() + "] not supported for field [" + vector.getName() + "]"
+            );
+
+            case RUNENDENCODED -> {
+                var reVector = (RunEndEncodedVector) vector;
+                // Caveat: performance could be improved. getRunEnd() does a binary search for the position
+                // in the value array, and so does isNull() at the top of this method. If run-end encoding
+                // is heavily used, we could use an optimized cursor structure that is moved forward at
+                // each iteration in the calling loop.
+                writeValue(reVector.getValuesVector(), reVector.getRunEnd(position), dictionaries, generator);
+                yield null;
+            }
+
+            case EXTENSIONTYPE -> throw new JsonParseException(
+                    "Arrow extension [" + vector.getMinorType() + "] not supported for field [" + vector.getName() + "]"
+            );
         };
+    }
+
+    private static void writeJsonExtensionValue(ValueVector vector, int position, XContentGenerator generator) throws IOException {
+        if (STRING_TYPES.contains(vector.getMinorType()) == false) {
+            throw new ArrowFormatException("Json vectors must be strings");
+        }
+        // Parse directly from the Arrow buffer wrapped in a ByteBuffer
+        var pointer = ((VariableWidthFieldVector) vector).getDataPointer(position);
+        var buf = pointer.getBuf().nioBuffer(pointer.getOffset(), (int)pointer.getLength());
+
+        var parser = XContentType.JSON.xContent().createParser(
+            XContentParserConfiguration.EMPTY,
+            new ByteBufferBackedInputStream(buf)
+        );
+
+        generator.copyCurrentStructure(parser);
     }
 }
